# LaboratoryFisrtCourse

./: .gitignore  CMakeLists.txt  README.md  main.cpp
1lab/: README.md  lesson.cpp  lesson.h
2lab/: README.md  lesson_two.cpp  lesson_two.h
3lab/: README.md
3lab/Header Files/: general_header.h
3lab/Source Files/: 10task.cpp  1task.cpp  2task.cpp  3task.cpp  4task.cpp  5task.cpp  6task.cpp  7task.cpp  8task.cpp  9task.cpp
4lab/: README.md
4lab/General/: file_for_four_lab.cpp  file_for_four_lab.h
4lab/Header Files/: 10task.h  1task.h  2task.h  3task.h  4task.h  5task.h  6task.h  7task.h  8task.h  9task.h
4lab/Source Files/: 10task.cpp  1task.cpp  2task.cpp  3task.cpp  4task.cpp  5task.cpp  6task.cpp  7task.cpp  8task.cpp  9task.cpp
Standard Tools/: tools.cpp
Standart Tools/: tools.h
Start Files/: start_file.cpp  start_file.h
