# DimitriiTrater

cmake_minimum_required(VERSION 3.23)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled "main.cpp" "Standart Tools/tools.cpp" "Standart Tools/tools.h" "Start Files/start_file.cpp" "Start Files/start_file.h" "1lab/lesson.cpp" "2lab/lesson_two.cpp" "1lab/lesson.h" "2lab/lesson_two.h" "3lab/Source Files/1task.cpp" "3lab/Header Files/general_header.h" "3lab/Source Files/2task.cpp" "3lab/Source Files/3task.cpp" "3lab/Source Files/4task.cpp" "3lab/Source Files/5task.cpp" "3lab/Source Files/6task.cpp" "3lab/Source Files/7task.cpp" "3lab/Source Files/8task.cpp" "3lab/Source Files/9task.cpp" "3lab/Source Files/10task.cpp" "4lab/General/file_for_four_lab.cpp" "4lab/General/file_for_four_lab.h" "4lab/Source Files/1task.cpp" "4lab/Header Files/1task.h" "4lab/Source Files/2task.cpp" "4lab/Header Files/2task.h" "4lab/Source Files/3task.cpp" "4lab/Header Files/3task.h" "4lab/Source Files/4task.cpp" "4lab/Header Files/4task.h")
